--- a/IntroductionMVC5/Views/Arslo/AddProfoma.cshtml
+++ b/IntroductionMVC5/Views/Arslo/AddProfoma.cshtml
@@ -180,7 +180,7 @@
                                 <input type="text" id='unitPrice0' onkeyup='calculatePriceTotal()' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
                             </td>
                             <td>
-                                <input type="number" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control" />
+                                <input type="number" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control currency" />
                             </td>
                         </tr>
                         <tr id='addr1'></tr>
