--- a/IntroductionMVC5/Views/Arslo/DrawDownProfoma.cshtml
+++ b/IntroductionMVC5/Views/Arslo/DrawDownProfoma.cshtml
@@ -86,7 +86,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("Index", "Arslo")'" value="Back" />
+                <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("ProfomaDetails", "Arslo", new {id=Model.Id })'" value="Back" />
                 <button value="Create" class="btn btn-primary" onclick=" location.href='@Url.Action("EditProfoma", "Arslo")'">Drawdown</button>
             </div>
         </div>
