--- a/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
+++ b/IntroductionMVC5/Views/Arslo/GenerateInvoice.cshtml
@@ -1,11 +1,12 @@
 ﻿@model IntroductionMVC5.Models.ArsloTrading.ArsloInvoice
 
 @{
-    ViewBag.Title = "GenerateInvoice";
+    ViewBag.Title = "Generate Invoice";
 }
 <script type="text/javascript">
+
+
     var i = 1;
-    var invoiceItems = [];
     var profItems = 0;
     function calculatePriceTotal(e) {
 
@@ -57,7 +58,7 @@
             $("#notificationAlert").hide();
         }
 
-        if (counter>=1) {
+        if (counter >= 1) {
             $("#createBtn").removeAttr('disabled');
         }
         $("#itemCount").val(profItems);
@@ -77,7 +78,7 @@
                 for (var i = 0; i < invoiceItems.length; i++) {
                     $('#selectDescription').append("'<option value=" + invoiceItems[i].Description + ">" + invoiceItems[i].Description + "</option>");
                 }
-          
+
                 $('#selectQuntity').val('');
                 $('#selectPrice').val('');
             }
@@ -121,13 +122,13 @@
 
         //Profoma Rows Items
         $("#add_row").click(function () {
-            var description =  $("#selectDescription").find(":selected").text();;
+            var description = $("#selectDescription").find(":selected").text();;
             var unitPrice = 1 * $('#selectPrice').val();
-            var quntity = 0; 
+            var quntity = 0;
 
             var aa = 1 * $("#itemCount").val();
             $('#addr' + aa).html("<td>" + (aa + 1) +
-                "</td><td><input id='description" + aa + "'name='description" + aa + "' type='text' value='" + description + "' readonly placeholder='Item' class='form-control' /></td><td><input id='desc" + aa + "'name='desc" + aa + "' type='text' value='' placeholder='Description' class='form-control' /></td><td><input id='quantity" + aa + "' type='text' onkeyup='calculatePriceTotal("+aa+")' placeholder='QTY' value='" + quntity + "' name='quantity" + aa + "' class='form-control'></td><td><input id='unitPrice" + aa + "' name='unitPrice" + aa+ "' value='" + unitPrice + "' readonly type='text' placeholder='Price' class='form-control'></td><td><input class='form-control input-md'id='unitTotalPrice" + aa + "' name='unitTotalPrice" + aa + "' type='number' readonly placeholder='Total Price'/></td>");
+                "</td><td><input id='description" + aa + "'name='description" + aa + "' type='text' value='" + description + "' readonly placeholder='Item' class='form-control' /></td><td><input id='desc" + aa + "'name='desc" + aa + "' type='text' value='' placeholder='Description' class='form-control' /></td><td><input id='quantity" + aa + "' type='text' onkeyup='calculatePriceTotal(" + aa + ")' placeholder='QTY' value='" + quntity + "' name='quantity" + aa + "' class='form-control'></td><td><input id='unitPrice" + aa + "' name='unitPrice" + aa + "' value='" + unitPrice + "' readonly type='text' placeholder='Price' class='form-control'></td><td><input class='form-control input-md'id='unitTotalPrice" + aa + "' name='unitTotalPrice" + aa + "' type='number' readonly placeholder='Total Price'/></td>");
 
 
             $('#tab_logic').append('<tr id="addr' + (aa + 1) + '"></tr>');
@@ -135,6 +136,10 @@
             $("#itemCount").val(aa);
             profItems = aa;
             i = profItems;
+
+            $('#selectQuntity').val('');
+            $('#selectPrice').val('');
+            $("#selectDescription").val('');
         });
 
         $("#delete_row").click(function () {
@@ -147,167 +152,168 @@
         });
 
         $("#createBtn").attr('disabled', 'disabled');
+        FillCity(@Model.Profoma.Id);
     });
 </script>
-<h2>Generate Invoice</h2>
+<div class="row">
+    <h2>Generate Invoice For Profoma : <label> @string.Format("{0}", Model.Profoma.ProfomaNumber)</label></h2>
+</div>
 @using (Html.BeginForm("GenerateInvoice", "Arslo", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true)
-<fieldset>
-    <div class="row">
-        <div class="col-xs-2">
-            <label style="margin-top:5%">Invoice Number</label>
-        </div>
-        <div class="col-xs-3">
-            @Html.TextBoxFor(model => model.Reference, new { @class = "form-control", @type = "text", @readonly = "@readonly" })
-            @Html.ValidationMessageFor(model => model.Reference)
-        </div>
-        <div class="col-xs-1 col-lg-offset-2">
-            <label style="margin-top:8%">Date</label>
-        </div>
-        <div class="col-xs-3">
-            @Html.TextBoxFor(model => model.Date, new { @class = "datepicker form-control", @name = "invoiceDate", @type = "text" })
-            @Html.ValidationMessageFor(model => model.Date)
-        </div>
-    </div>
-    <div class="row" style="margin-top:1%">
-        <div class="col-xs-2">
-            <label style="margin-top:5%">POL</label>
-        </div>
-        <div class="col-xs-3">
-            @Html.TextBoxFor(model => model.PointOfLoading, new { @class = "form-control", @type = "text" })
-            @Html.ValidationMessageFor(model => model.PointOfLoading)
-        </div>
-        <div class="col-xs-1 col-lg-offset-2">
-            <label style="margin-top:8%">POD</label>
-        </div>
-        <div class="col-xs-3">
-            @Html.TextBoxFor(model => model.PointOfDelivery, new { @class = "form-control", @type = "text" })
-            @Html.ValidationMessageFor(model => model.PointOfDelivery)
-        </div>
-    </div>
-    <div class="row" style="margin-top:1%">
-        <div class="col-xs-2">
-            <label style="margin-top:5%">Booking Number</label>
-        </div>
-        <div class="col-xs-3">
-            <div class="form-group">
-                @Html.TextBoxFor(model => model.BookingNumber, new { @class = "form-control", @type = "text" })
-                @Html.ValidationMessageFor(model => model.BookingNumber)
+    @Html.HiddenFor(model => model.Profoma.Id)
+    <fieldset>
+        <div class="row">
+            <div class="col-xs-2">
+                <label style="margin-top:5%">Invoice Number</label>
+            </div>
+            <div class="col-xs-3">
+                @Html.TextBoxFor(model => model.Reference, new { @class = "form-control", @type = "text", @readonly = "@readonly" })
+                @Html.ValidationMessageFor(model => model.Reference)
+            </div>
+            <div class="col-xs-1 col-lg-offset-2">
+                <label style="margin-top:8%">Date</label>
+            </div>
+            <div class="col-xs-3">
+                <span>
+                    <input name="date" id="invoiceDate" class="datepicker" type="text" value="@Model.Date" style="margin-bottom: 5px" />
+                    <span class="add-on"><i class="glyphicon glyphicon-th"></i></span>
+                </span>
+                @*@Html.TextBoxFor(model => model.Date, new { @class = "datepicker", @name = "invoiceDate", @type = "text" })
+                    @Html.ValidationMessageFor(model => model.Date)*@
             </div>
         </div>
-
-        <div class="col-xs-1 col-lg-offset-2">
-            <label style="margin-top:5%">Vessel</label>
-        </div>
-        <div class="col-xs-3">
-            <div class="form-group">
-                @Html.TextBoxFor(model => model.VesselNumber, new { @class = "form-control", @type = "text" })
-                @Html.ValidationMessageFor(model => model.VesselNumber)
+        <div class="row" style="margin-top:1%">
+            <div class="col-xs-2">
+                <label style="margin-top:5%">POL</label>
+            </div>
+            <div class="col-xs-3">
+                @Html.TextBoxFor(model => model.PointOfLoading, new { @class = "form-control", @type = "text" })
+                @Html.ValidationMessageFor(model => model.PointOfLoading)
+            </div>
+            <div class="col-xs-1 col-lg-offset-2">
+                <label style="margin-top:8%">POD</label>
+            </div>
+            <div class="col-xs-3">
+                @Html.TextBoxFor(model => model.PointOfDelivery, new { @class = "form-control", @type = "text" })
+                @Html.ValidationMessageFor(model => model.PointOfDelivery)
             </div>
         </div>
-    </div>
-    <div class="row" style="margin-top:1%">
-        <div class="col-xs-2">
-            <label style="margin-top:5%">Select Profoma</label>
-        </div>
-        <div class="col-xs-3">
-            <div class="form-group">
-                @Html.DropDownList("Profoma.Id", (SelectList)ViewBag.Profomas, string.Empty, new { @class = "form-control", @onchange = "FillCity(this.value)" })
+        <div class="row" style="margin-top:1%">
+            <div class="col-xs-2">
+                <label style="margin-top:5%">Booking Number</label>
             </div>
-        </div>
-    </div>
-    <div class="row" style="margin-top:1%" id="itemToAdd">
-        <div class="col-xs-2">
-            <label style="margin-top:8%">Invoice Item</label>
-        </div>
-        <div class="col-xs-7">
-            <table class="table table-bordered table-hover">
-                <tbody>
-                    <tr>
-                        <td>
-                            <select class='form-control' onchange='doStuff()' placeholder='Description' name='selectDescription' id='selectDescription'></select>
-                        </td>
-                        <td>
-                            <input type="text" id='selectQuntity' readonly placeholder='QTY' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" id='selectPrice' readonly placeholder='Price' class="form-control calcClass" />
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-xs-3">
-            <a id="add_row" class="btn btn-default btn-mini" style="border:1px solid; border-color:#94c523;margin-top:3%">Add Invoice Item</a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <table class="table table-bordered table-hover" id="tab_logic" style="margin-top:2%">
-                <thead>
-                    <tr>
-                        <th class="text-center">
-
-                        </th>
-                        <th class="text-center">
-                            Product
-                        </th>
-                        <th class="text-center">
-                            Description
-                        </th>
-                        <th class="text-center">
-                            Quantity
-                        </th>
-                        <th class="text-center">
-                            Unit Price
-                        </th>
-                        <th class="text-center">
-                            Total Price
-                        </th>
-                    </tr>
-                </thead>
-                <tbody id="tBodyBra">
-                    <tr id='addr0'>
-                        <td>1</td>
-                        <td>
-                            <input type="text" id='description0' name="description0" placeholder='Item' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" id='desc0' name="desc0" placeholder='Description' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" id='quantity0' onchange='calculatePriceTotal(this)' name="quantity0" placeholder='QTY' class="form-control" />
-                        </td>
-                        <td>
-                            <input type="text" id='unitPrice0' onchange='calculatePriceTotal(this)' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
-                        </td>
-                        <td>
-                            <input type="text" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control" />
-                        </td>
-                    </tr>
-                    <tr id='addr1'></tr>
-                </tbody>
-            </table>
-            <div class="row">
-                <div class="col-md-12">
-                    <input id="itemCount" hidden="hidden" name="itemCount" />
-                    <a id='delete_row' class="pull-right btn-mini btn btn-default" style="border:1px solid; border-color:red;">Delete Row</a>
+            <div class="col-xs-3">
+                <div class="form-group">
+                    @Html.TextBoxFor(model => model.BookingNumber, new { @class = "form-control", @type = "text" })
+                    @Html.ValidationMessageFor(model => model.BookingNumber)
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <input id="itemCount" hidden="hidden" name="itemCount" />
+
+            <div class="col-xs-1 col-lg-offset-2">
+                <label style="margin-top:5%">Vessel</label>
+            </div>
+            <div class="col-xs-3">
+                <div class="form-group">
+                    @Html.TextBoxFor(model => model.VesselNumber, new { @class = "form-control", @type = "text" })
+                    @Html.ValidationMessageFor(model => model.VesselNumber)
                 </div>
             </div>
         </div>
-    </div>
-    <p>
-        <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("Index", "Arslo")'" value="Back" />
-        <button value="Create" id="createBtn" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
-        <div id="notificationAlert" class="alert alert-warning" role="alert" hidden="hidden">
-            Please Note Quantity Exceeds Profoma's Quantity!
+        <hr />
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <table class="table  table-hover">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <label style="margin-top:8%">Invoice Item</label>
+                            </td>
+                            <td>
+                                <select class='form-control' onchange='doStuff()' placeholder='Description' name='selectDescription' id='selectDescription'></select>
+                            </td>
+                            <td>
+                                <input type="text" id='selectQuntity' readonly placeholder='QTY' class="form-control" />
+                            </td>
+                            <td>
+                                <input type="text" id='selectPrice' readonly placeholder='Price' class="form-control calcClass" />
+                            </td>
+                            <td>
+                                <a id="add_row" class="btn btn-default btn-sm" style="border:1px solid; border-color:#94c523;align-content:center;margin-top:3%">Add Invoice Item</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <table class="table table-bordered" id="tab_logic" style="margin-top:2%">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">
+
+                                    </th>
+                                    <th class="text-center">
+                                        Product
+                                    </th>
+                                    <th class="text-center">
+                                        Description
+                                    </th>
+                                    <th class="text-center">
+                                        Quantity
+                                    </th>
+                                    <th class="text-center">
+                                        Unit Price
+                                    </th>
+                                    <th class="text-center">
+                                        Total Price
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="tBodyBra">
+                                <tr id='addr0'>
+                                    <td>1</td>
+                                    <td>
+                                        <input type="text" id='description0' name="description0" placeholder='Item' class="form-control" />
+                                    </td>
+                                    <td>
+                                        <input type="text" id='desc0' name="desc0" placeholder='Description' class="form-control" />
+                                    </td>
+                                    <td>
+                                        <input type="text" id='quantity0' onchange='calculatePriceTotal(this)' name="quantity0" placeholder='QTY' class="form-control" />
+                                    </td>
+                                    <td>
+                                        <input type="text" id='unitPrice0' onchange='calculatePriceTotal(this)' name="unitPrice0" placeholder='Price' class="form-control calcClass" />
+                                    </td>
+                                    <td>
+                                        <input type="text" id='unitTotalPrice0' readonly name="unitTotalPrice0" placeholder='Total Price' class="form-control currency" />
+                                    </td>
+                                </tr>
+                                <tr id='addr1'></tr>
+                            </tbody>
+                        </table>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <input id="itemCount" hidden="hidden" name="itemCount" />
+                                <a id='delete_row' class="pull-right btn-mini btn btn-default" style="border:1px solid; border-color:red;">Delete Row</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <input id="itemCount" hidden="hidden" name="itemCount" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </p>
-</fieldset>
+        <p>
+            <input type="button" class="btn btn-primary" onclick=" location.href='@Url.Action("ProfomaDetails", "Arslo", new {id=Model.Profoma.Id })'" value="Back" />
+            <button value="Create" id="createBtn" class="btn btn-primary" onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo")'">Create</button>
+            <div id="notificationAlert" class="alert alert-warning" role="alert" hidden="hidden">
+                Please Note Quantity Exceeds Profoma's Quantity!
+            </div>
+        </p>
+    </fieldset>
 }
