--- a/IntroductionMVC5/Views/Arslo/Index.cshtml
+++ b/IntroductionMVC5/Views/Arslo/Index.cshtml
@@ -31,9 +31,9 @@
         <li class="" style="background-color: skyblue">
             <a href="#profile" data-toggle="tab">Profoma</a>
         </li>
-        <li class="" style="background-color: skyblue">
+        @*<li class="" style="background-color: skyblue">
             <a href="#invoice" data-toggle="tab">Invoice</a>
-        </li>
+        </li>*@
     </ul>
 
     <div id="myTabContent" class="tab-content">
@@ -189,13 +189,12 @@
                             }
                             <td>
                                 <strong>
-                                    @string.Format("R {0:N}", profoma.Invoices.Sum(s => s.TotalPrice))
+                                    @string.Format("R {0:N}", profoma.ProfomaDrawDowns.Sum(s => s.Amount) - profoma.Invoices.Sum(s => s.TotalPrice))
                                 </strong>
                             </td>
                             <td>
                                 <input type="button" class="btn btn-primary btn-xs" value="Edit" onclick=" location.href='@Url.Action("EditProfoma", "Arslo", new { id = item.Id }) ' " />
                                 <input type="button" class="btn btn-info btn-xs" value="Details" onclick=" location.href='@Url.Action("ProfomaDetails", "Arslo", new { id = item.Id }) ' " />
-                                <input type="button" class="btn btn-info btn-xs" value="Drawdown" onclick=" location.href='@Url.Action("DrawDownProfoma", "Arslo", new { id = item.Id }) ' " />
                             </td>
                         </tr>
                     }
@@ -204,7 +203,7 @@
             </div>
         </div>
 
-        <div id="invoice" class="tab-pane fade">
+        @*<div id="invoice" class="tab-pane fade">
             <h2>Invoices</h2>
 
 
@@ -282,7 +281,7 @@
                 }
             </table>
 
-        </div>
+        </div>*@
     </div>
 </div>
 
