--- a/IntroductionMVC5/Views/Arslo/EditProfoma.cshtml
+++ b/IntroductionMVC5/Views/Arslo/EditProfoma.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "EditProfoma";
-    //Layout = "~/Views/Shared/_ArsloLayout.cshtml";
 }
 
 <script type="text/javascript">
@@ -55,6 +54,17 @@
         var today = now.getFullYear() + '/' + month + '/' + day;
         if (!$('#profomaDate').val()) {
             $('#profomaDate').val(today);
+        } else {
+            var valDate = new Date($('#profomaDate').val());
+
+            var valMonth = (valDate.getMonth() + 1);
+            var valDay = valDate.getDate();
+            if (valMonth < 10)
+                valMonth = "0" + valMonth;
+            if (valDay < 10)
+                valDay = "0" + valDay;
+            var val = valDate.getFullYear() + '/' + valMonth + '/' + valDay;
+            $('#profomaDate').val(val);
         }
         $('.datepicker').datepicker({
             autoclose: true,
@@ -108,13 +118,6 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-        @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.Amount, string.Empty, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Amount)
-        </div>
-    </div>*@
     <div class="row">
         <div class="col-xs-12">
             <table class="table table-bordered table-hover" id="tab_logic" style="margin-top:2%">
