--- a/IntroductionMVC5/Views/Arslo/ProfomaDetails.cshtml
+++ b/IntroductionMVC5/Views/Arslo/ProfomaDetails.cshtml
@@ -4,7 +4,19 @@
     ViewBag.Title = "Profoma Details";
 }
 
-<h2>Profoma Details</h2>
+<table>
+    <tr>
+        <td><h2>@string.Format("{0}", Model.Customer.CustomerName)</h2></td>
+        <td><h3>Profoma Details @string.Format("{0}", Model.ProfomaNumber)</h3></td>
+        @if (Model.Status == "Paid & Completed")
+        {
+            <td><span style="color: green" class="glyphicon glyphicon-ok"></span></td>
+        }
+
+    </tr>
+</table>
+
+
 <hr />
 <div class="row">
 
@@ -30,9 +42,6 @@
                     <td>
                         <label>Profoma Amount </label>
                     </td>
-                    <td>
-                        <label>Running Amount </label>
-                    </td>
                     <td></td>
                 </tr>
                 <tr>
@@ -55,9 +64,6 @@
                         @string.Format("R {0:N}", (Model.Amount))
                     </td>
                     <td>
-                        @string.Format("R {0:N}", (Model.Amount - Model.ProfomaDrawDowns.Sum(d => d.Amount)))
-                    </td>
-                    <td>
                         <input type="button" class="btn btn-success btn-xs" formtarget="_blank" target="_blank" onclick=" location.href='@Url.Action("GetPdf", "Arslo", new { fileName = Model.Location })'" value="Download Profoma" />
                     </td>
                 </tr>
@@ -73,9 +79,12 @@
                         <h4>Drawdowns</h4>
                     </td>
                     <td style="width: 50%;">
-                        <a class="btn btn-primary pull-right btn-sm" onclick=" location.href='@Url.Action("DrawDownProfoma", "Arslo", new { id = Model.Id }) ' ">
-                            <i class="glyphicon glyphicon-credit-card"></i> Add Drawdown
-                        </a>
+                        @if (HttpContext.Current.User.IsInRole("Admin") && Model.Status != "Paid & Completed")
+                        {
+                            <a class="btn btn-primary pull-right btn-sm" onclick=" location.href='@Url.Action("DrawDownProfoma", "Arslo", new { id = Model.Id }) ' ">
+                                <i class="glyphicon glyphicon-credit-card"></i> Add Drawdown
+                            </a>
+                        }
                     </td>
                 </tr>
             </table>
@@ -115,6 +124,36 @@
                 </tr>
             </table>
         </div>
+
+        <div class="col-xs-6">
+            <table style="float: left; width: 100%;">
+                <tr>
+                    <td style="width: 50%">
+                        <h4>Calculations</h4>
+                    </td>
+                </tr>
+            </table>
+            <table class="table table-bordered" style="margin-top:2%">
+                <thead>
+                    <tr class="info">
+                        <th>
+                            Total shipped
+                        </th>
+                        <th>
+                            Outstanding
+                        </th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>
+                        @string.Format("R {0:N}", Model.Invoices.Sum(s => s.TotalPrice))
+                    </td>
+                    <td>
+                        @string.Format("R {0:N}", Model.ProfomaDrawDowns.Sum(s => s.Amount) - Model.Invoices.Sum(s => s.TotalPrice))
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
@@ -125,11 +164,14 @@
                         <h4>Invoices</h4>
                     </td>
                     <td style="width: 50%;">
-                        <a class="btn btn-primary pull-right btn-sm" id="generateInvoiceBtn"
-                           onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo", new { id = Model.Id }) ' "
-                           data-toggle="tooltip" data-placement="top" title="Cannot Generate Invoice Before Drawdown">
-                            <i class="glyphicon glyphicon-plus-sign"></i> Generate Inovoice
-                        </a>
+                        @if (Model.Status != "Paid & Completed" || HttpContext.Current.User.IsInRole("Admin"))
+                        {
+                            <a class="btn btn-primary pull-right btn-sm" id="generateInvoiceBtn"
+                               onclick=" location.href='@Url.Action("GenerateInvoice", "Arslo", new { id = Model.Id }) ' "
+                               data-toggle="tooltip" data-placement="top" title="Cannot Generate Invoice Before Drawdown">
+                                <i class="glyphicon glyphicon-plus-sign"></i> Generate Inovoice
+                            </a>
+                        }
                     </td>
                 </tr>
             </table>
@@ -170,10 +212,12 @@
                             @string.Format("R {0:N}", item.TotalPrice)
                         </td>
                         <td>
-                            <a class="btn btn-primary btn-xs" onclick=" location.href='@Url.Action("EditInvoice", "Arslo",
-                                    new { id = item.Id }) ' ">
-                                <i class="glyphicon glyphicon-edit"></i> Edit
-                            </a>
+                            @if (Model.Status != "Paid & Completed" || HttpContext.Current.User.IsInRole("Admin"))
+                            {
+                                <a class="btn btn-primary btn-xs" onclick=" location.href='@Url.Action("EditInvoice", "Arslo", new { id = item.Id }) ' ">
+                                    <i class="glyphicon glyphicon-edit"></i> Edit
+                                </a>
+                            }
                             <input type="button" class="btn btn-success btn-xs"
                                    onclick="location.href='@Url.Action("GetPdf", "Arslo",
                                     new { fileName = item.InvoiceLocation })'" value="Download" />
@@ -205,7 +249,7 @@
     $(document).ready(function () {
 
         var list = @{ @Html.Raw(Json.Encode(Model.ProfomaDrawDowns)); };
-        
+
         if (list.length < 1) {
             $("#generateInvoiceBtn").attr('disabled', 'disabled');
             $('#generateInvoiceBtn').tooltip({ boundary: 'window' });
