--- a/IntroductionMVC5/Views/PettyCash/EditPayment.cshtml
+++ b/IntroductionMVC5/Views/PettyCash/EditPayment.cshtml
@@ -70,7 +70,7 @@
                     @Html.LabelFor(model => model.Amount)
                 </div>
                 <div class="form-group">
-                    @Html.TextBoxFor(model => model.Amount, new { @class = "form-control", @type = "text" })
+                    @Html.TextBoxFor(model => model.Amount, new { @class = "form-control", @type = "text"  ,@readonly = "readonly", })
                     @Html.ValidationMessageFor(model => model.Amount)
                 </div>
                 <p>
